[workspace]
members = ["jito_protos", "jito_searcher_client"]

[workspace.dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.11", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
] }
futures-util = "0.3.28"
thiserror = "1.0.40"

solana-perf = "=2.1"
solana-client = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status = "=2.1"

jito-searcher-client = { path = "./jito_searcher_client", version = "0.1.0" }
jito-protos = { path = "./jito_protos", version = "0.1.0" }
