[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
solana-perf = { workspace = true, features = ["dev-context-only-utils"] }
solana-packet.workspace = true
solana-transaction.workspace = true
tonic.workspace = true

[build-dependencies]
protobuf-src = "1.1.0"
tonic-build = "0.10"
